2009-XX-XX Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.7.4 (libshogun 4.0, libshogunui 2.0)
	* This release contains several cleanups and bugfixes:
	* Features:
	* Bugfixes:
	* Cleanup and API Changes:

2009-05-02 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.7.3 (libshogun 3.0, libshogunui 1.1)
	* This release contains several bugfixes:
	* Features:
		- Improve libshogun/developer tutorial.
		- Implement convenience function for parallel quicksort.
		- Fasta/fastq file loading for StringFeatures.
	* Bugfixes:
		- get_name function was undefined in Evaluation causing the
		PerformanceMeasures class to be defunct.
		- Workaround bugs in the std template library for math functions.
		- Compiles cleanly under OSX now, thanks to James Kyle.
	* Cleanup and API Changes:
		- Make sure that all destructors are declared virtual.

2009-03-23 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.7.2 (libshogun 2.0, libshogunui 1.1)
	* This release contains several cleanups and enhancements:
	* Features:
		- Support all data types from python_modular: dense, scipy-sparse
		csc_sparse matrices and strings of type bool, char, (u)int{8,16,32,64},
		float{32,64,96}. In addition, individual vectors/strings can now be
		obtained and even changed.  See examples/python_modular/features_*.py
		for examples.
		- AUC maximization now works with arbitrary kernel SVMs.
		- Documentation updates, many examples have been polished.
		- Slightly speedup Oligo kernel.
	* Bugfixes:
		- Fix reading strings from directory (f.load_from_directory()).
		- Update copyright to 2009.
	* Cleanup and API Changes:
		- Remove {Char,Short,Word,Int,Real}Features and only ever use the
		templated SimpleFeatures.
		- Split up examples in examples/python_modular to separate files.
		- Now use s.set_features(strs) instead of s.set_string_features(strs)
          to set string features.
		- The meaning of the width parameter for the Oligo Kernel changed, the